# phase-field-crystals

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  annotated.html  class_stress_calculator_m_p_i.html  concepts.html  files.html  index.html  modules.html  namespacegrid__tools.html  namespaces.html  pages.html  phase-field-crystals.tagfile.xml  searchdata-v2.js
app/: CMakeLists.txt
app/examples/: CMakeLists.txt  initialize_hexagonal_lattice.cpp  toml_example.cpp
app/examples/local_integration/: CMakeLists.txt  is_in_neighborhood_test.cpp  visit_neighbors_test.cpp
app/simulations/: CMakeLists.txt  phase_field_crystal_simulation.cpp  phase_field_crystal_simulation_mpi.cpp
docs/: poxy.toml
parameter-files/: hexagonal_lattice.toml
src/: CMakeLists.txt
src/grid_tools/: CMakeLists.txt  grid_tools.cpp  grid_tools.hpp
src/numerics/: CMakeLists.txt  local_integration.cpp  local_integration.hpp
src/parameters/: CMakeLists.txt  toml.cpp  toml.hpp
src/phase_field_crystal_systems/: CMakeLists.txt  phase_field_crystal_system.cpp  phase_field_crystal_system.hpp  phase_field_crystal_system_mpi.cpp  phase_field_crystal_system_mpi.hpp
src/phase_field_functions/: CMakeLists.txt  hexagonal_lattice.cpp  hexagonal_lattice.hpp
src/stress_tools/: CMakeLists.txt  stress_calculator.cpp  stress_calculator.hpp  stress_calculator_mpi.cpp  stress_calculator_mpi.hpp
src/utilities/: CMakeLists.txt  vector_conversion.cpp  vector_conversion.hpp
theory/: calculating_rhs.ipynb
theory/hexagonal-lattice/: hexagonal_lattice.tex
theory/local-integration/: local_integration.md  local_integration.tex
